--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Acerca de</h2>
+                    <h3 class="section-subheading text-muted">RaiHogar Limpieza and Servicios de Hogar</h3>
                 </div>
             </div>
             <div class="row">
@@ -17,10 +17,10 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4 class="subheading">Empezamos</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Sobre los años la experiencia acumula. Limpieza de hogares, apartamentos, casas y chalet. Lavar la ropa, planchar, cocinar, cuidar a los niños. Decoración y pintura. Gestión y cuidado de apartamentos bajo alquiler de Airbnb. </p>
                                 </div>
                             </div>
                         </li>
