--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,19 +19,19 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">Servicos</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Acera de</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#team">Equipo</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Contact<o/a>
                     </li>
                 </ul>
             </div>
@@ -44,9 +44,11 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-lead-in">Su hogar, limpio y acogedor!</div>
+                <div class="intro-heading">Servicio y limpieza de hogar</div>
+                <a href="#services" class="page-scroll btn btn-xl">Cuéntame más...</a>
+                <h1>Torremolinos</h1>
+                <h2>Llama <a href="tel:+34669911346"> Raimunda! 669 91 13 46</h2>
             </div>
         </div>
     </header>
