--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -1,7 +1,7 @@
 <!-- Portfolio Grid Section -->
     <section id="portfolio" class="bg-light-gray">
         <div class="container">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portfolio</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
@@ -24,6 +24,6 @@
                     </div>
                 </div>
             {% endfor %}
-            </div>
+            </div> -->
         </div>
     </section>
