--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Servicos</a>
+                        <a class="page-scroll" href="#services">Servicios</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -31,7 +31,7 @@
                         <a class="page-scroll" href="#team">Equipo</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact<o/a>
+                        <a class="page-scroll" href="#contact">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -48,7 +48,7 @@
                 <div class="intro-heading">Servicio y limpieza de hogar</div>
                 <a href="#services" class="page-scroll btn btn-xl">Cuéntame más...</a>
                 <h1>Torremolinos</h1>
-                <h2>Llama <a href="tel:+34669911346"> Raimunda! 669 91 13 46</h2>
+                <h2>Llama <a href="tel:+34669911346"> Raimunda! 669 91 13 46</a></h2>
             </div>
         </div>
     </header>
