--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,7 @@
                         <i class="fa fa-stack-1x fa-inverse"><img src="/img/clothes.svg"></i>
                     </span>
                     <h4 class="service-heading">Ropa</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Ayudamos con tu coladas, tu ropa etc. Lavado, planchado, arreglos. Lo que necesitas!</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,7 +22,7 @@
                         <i class="fa fa-stack-1x fa-inverse"><img src="/img/tray.svg"></i>
                     </span>
                     <h4 class="service-heading">Cocinar</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Hace falta tiempo para cocinar, pero prefieres comer comida sana y casero. Sin problema, estamos para ayudar!</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -30,7 +30,7 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Cuidado completo</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Desde limpieza puntual, hasta total cuidado. Creamos un plan para ti, con los servicios que haga falta! Contacte con nosotros. <a href="tel:+34669911346"> Llámanos!</a></p>
                 </div>
             </div>
         </div>
