--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,38 +2,38 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Puedo ayudar?</h2>
+                    <h3 class="section-subheading text-muted">Alguna duda, pregunta, déjanos saber!</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <form method="POST" action="https://formspree.io/rai@raihogar.com" name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="control-group form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <input type="text" class="form-control" name="name" placeholder="Tu nombre *" id="name" required data-validation-required-message="Como te llamas?">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <input name="_replyto" type="email" class="form-control" placeholder="Tu Email *" id="email" required data-validation-required-message="Falta tu correo electronico">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <input type="tel" class="form-control" placeholder="Tu numero de telefono *" id="phone" required data-validation-required-message="Cual era tu numero?">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="control-group form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <textarea name="body" class="form-control" placeholder="Tus mensajes *" id="message" required data-validation-required-message="No olvida tu mensajes"></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
+                                <button value="Send" type="submit" class="btn btn-xl">Enviar</button>
                             </div>
                         </div>
                     </form>
