--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,12 +13,12 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
+                    <!-- <ul class="list-inline quicklinks">
                         <li><a href="#">Privacy Policy</a>
                         </li>
                         <li><a href="#">Terms of Use</a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
                 <div class="col-md-4">
                         <div>Icons made by <a href="https://www.freepik.com/?__hstc=57440181.4b70609ffa256dc66739dc5ca2b0bc7c.1556471289020.1556471289020.1556471289020.1&__hssc=57440181.1.1556471289021&__hsfp=2766909483" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
