Initial schema.org markup

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,22 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-
+    <script type="application/ld+json">
+        {
+          "@context" : "http://schema.org",
+          "@type" : "LocalBusiness",
+          "name" : "RaiHogar Limpieza and Servicios de Hogar",
+          "image" : "https://www.raihogar.com/img/about/FullService.jpg",
+          "telephone" : "+34669911346",
+          "address" : {
+            "@type" : "PostalAddress",
+            "addressLocality" : "Torremolinos",
+            "addressRegion" : "Malaga",
+            "addressCountry" : "Spain",
+            "postalCode" : "29620"            
+          }
+        }
+        </script>
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
 	<link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
