--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,8 @@
             "addressRegion" : "Malaga",
             "addressCountry" : "Spain",
             "postalCode" : "29620"            
-          }
+          },
+          "priceRange":"€12-€25"
         }
         </script>
 	<link rel="shortcut icon" href="/favicon.ico">
